# s16e

./: .gitignore  Readme.md  doku.md  flake.nix  ibis.ts  libibis.c
controller/: controller.ino
controller-esp/: controller-esp.ino  octafont-LICENSE.txt  octafont-bold.h  octafont-regular.h  pixelfont.h
controller-esp-idf/: CMakeLists.txt  sdkconfig  sdkconfig.old
controller-esp-idf/components/lua-5.4.7/: CMakeLists.txt
controller-esp-idf/components/lua-5.4.7/src/: ldo.cpp  luaconf.h
controller-esp-idf/hello_world/main/: RingBuffer.hpp
controller-esp-idf/main/: CMakeLists.txt  config.hpp  helpers.cpp  helpers.hpp  idf_component.yml  main.cpp  stats.cpp  stats.hpp
controller-esp-idf/main/display/: Display.cpp  Display.hpp  setup.cpp  setup.hpp  srgbFunction.cpp  srgbFunction.hpp
controller-esp-idf/main/display/fonts/: octafont-bold.hpp  octafont-regular.hpp  pixelfont.hpp
controller-esp-idf/main/networking/: ClientConnection.cpp  ClientConnection.hpp  SocketWrapper.cpp  SocketWrapper.hpp  server.cpp  server.hpp  setup.cpp  setup.hpp
controller-esp-idf/main/state/: Script.cpp  Script.hpp  State.cpp  State.hpp  setup.cpp  setup.hpp
