idf_component_register(SRCS
"display/Display.cpp"
"display/setup.cpp"
"display/srgbFunction.cpp"
"helpers.cpp"
"state/setup.cpp"
"state/State.cpp"
"state/Script.cpp"
"networking/server.cpp"
"networking/setup.cpp"
"networking/ClientConnection.cpp"
"networking/SocketWrapper.cpp"
"stats.cpp"
"main.cpp"
                    INCLUDE_DIRS "")
